[package]
authors = ["Karuna Murti <karuna.murti@gmail.com>"]
description = "A full featured messaging engine for the FIX protocol implemented in Rust"
edition = "2021"
homepage = "https://github.com/karuna/fixer.git"
license = "Apache-2.0"
name = "fixer"
readme = "README.md"
repository = "https://github.com/karuna/fixer.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
atoi_simd = "0.10.1"
chrono = {version = "0.4", features = ["default", "serde"]}
delegate = "0.7.0"
fast-float = "0.2.0"
flexi_logger = {version = "0.25", features = ["async"]} 
itoa = "1.0"
lazy_static = "1.4.0"
log = "0.4"
maplit = "1.0"
memmem = "0.1.1"
owning_ref = "0.4.1"
parse_duration = "2.1.1"
quick-xml = {version = "0.23", features = ["serialize"]}
rust_decimal = "1.25"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
simple-error = "0.2"
tokio = {version = "1.20", features = ["io-util", "fs", "rt", "sync", "macros", "time"]}
ramhorns = "0.5"

[dev-dependencies]
async_once = "0.2.6"
criterion = "0.3"

[[bench]]
harness = false
name = "fixer_benchmark"
