[package]
authors = ["Karuna Murti <karuna.murti@gmail.com>"]
description = "A full featured messaging engine for the FIX protocol implemented in Rust"
edition = "2021"
homepage = "https://github.com/karuna/fixer.git"
license = "Apache-2.0"
name = "fixer"
readme = "README.md"
repository = "https://github.com/karuna/fixer.git"
rust-version = "1.56"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
async-trait = "0.1"
atoi_simd = "0.12"
chrono = {version = "0.4", features = ["default", "serde"]}
defer-lite = "1.0"
delegate = "0.9"
enum_dispatch = "0.3"
fast-float = "0.2"
fast-socks5 = "0.8"
flexi_logger = {version = "0.25", features = ["async"]}
futures = "0.3"
itoa = "1.0"
log = "0.4"
maplit = "1.0"
memmem = "0.1.1"
once_cell = "1.17"
parse_duration = "2.1"
quick-xml = {version = "0.23", features = ["serialize"]}
ramhorns = "0.14"
rust_decimal = "1.29"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
simple-error = "0.2"
subenum = "1.0"
thiserror = "1.0"
tokio = {version = "1.27", features = ["io-util", "fs", "rt", "rt-multi-thread", "sync", "macros", "time", "net"]}
tokio-rustls = "0.24"
wg = "0.3"

[dev-dependencies]
async_once = "0.2"
criterion = "0.3"
mockall = "0.11"

[[bench]]
harness = false
name = "fixer_benchmark"
