[package]
authors = ["Karuna Murti <karuna.murti@gmail.com>"]
description = "A full featured messaging engine for the FIX protocol implemented in Rust"
edition = "2021"
homepage = "https://github.com/karuna/fixer.git"
license = "Apache-2.0"
name = "fixer"
readme = "README.md"
repository = "https://github.com/karuna/fixer.git"
rust-version = "1.70"
version = "0.1.0"

[lib]
name = "fixer"
path = "src/lib.rs"

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
atoi_simd = "0.14"
chrono = { version = "0.4", features = ["default", "serde"] }
dashmap = { version = "5.5" }
defer-lite = "1.0"
delegate = "0.10"
dyn-clone = "1.0"
enum_dispatch = "0.3"
fast-float = "0.2"
futures = "0.3"
itoa = "1.0"
log = "0.4"
maplit = "1.0"
memmem = "0.1.1"
once_cell = "1.17"
owning_ref = "0.4"
parking_lot = "0.12"
parse_duration = "2.1"
quick-xml = { version = "0.23", features = ["serialize"] }
ramhorns = "0.14"
regex = "1.7"
rust_decimal = "1.25"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
simple-error = "0.3"
sscanf = "0.4"
thiserror = "1.0"
tokio = { version = "1.32", features = [
  "io-util",
  "io-std",
  "fs",
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
] }
wg = "0.3"

[dev-dependencies]
async_once = "0.2"
criterion = "0.5"
mockall = "0.11"
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }
serial_test = "2.0"

[[bench]]
harness = false
name = "fixer_benchmark"
